# back-manager-ip-free

./: .env.example  .gitignore  README.md  database.db  pyproject.toml
back/: app.py  database.py  models.py  schemas.py  security.py  settings.py
back/routers/: auth.py  todos.py  users.py  vlans.py
migrations/: env.py
migrations/versions/: 0795f8c60e4a_updated_at_on_table.py  c3906bcb41c1_create_tables_user_todos.py  e162522e78ca_create_all_tables.py  f691a14f1a4b_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_user.py  test_vlan.py
